# leadpulse

./: .gitignore  CLAUDE.md  CODING_PATTERNS.md  DB_AND_API_SCHEMA.md  INFRASTRUCTURE.md  MASTER_CONTEXT.md  SPRINT_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/api/: .dev.vars.example  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/api/src/: index.test.ts  index.ts
apps/api/src/db/: index.ts
apps/api/src/handlers/: campaigns.handler.ts  leads.handler.ts
apps/api/src/lib/: env.ts  errors.ts  logger.ts  redis.ts
apps/api/src/middleware/: auth.middleware.test.ts  auth.middleware.ts  cors.middleware.ts  rate-limit.middleware.ts
apps/api/src/queues/: signal-processing.queue.ts
apps/api/src/routes/: auth.routes.ts  campaigns.routes.ts  leads.routes.ts
apps/api/src/scheduled/: signal-poller.ts
apps/api/src/services/: campaign.service.test.ts  campaign.service.ts  deduplication.service.test.ts  deduplication.service.ts  lead.service.test.ts  lead.service.ts  user.service.test.ts  user.service.ts
apps/ml/: .env.example  ecosystem.config.js  main.py  pyproject.toml
apps/ml/src/intent/: classifier.py  prompts.py
apps/ml/src/ner/: extractor.py
apps/ml/src/scoring/: scorer.py
apps/ml/tests/: test_health.py
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/lib/: auth.ts
apps/web/src/routes/: __root.tsx  dashboard.tsx  (+2 more)
(+22 files in other folders)
