[project]
name = "leadpulse-ml"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.7.0,<3",
    "anthropic>=0.40.0,<0.41",
    "spacy>=3.8.0,<3.9",
    "httpx>=0.28.0,<0.29",
    "scikit-learn>=1.6.0,<1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
